<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.avaliacao.avaliacao_01.ReceitaActivity"
    tools:showIn="@layout/activity_receita">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotulo3" />

        <EditText
            android:id="@+id/txtSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <TextView
            android:id="@+id/lblDeposito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotulo4" />

        <EditText
            android:id="@+id/txtDeposito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotulo5" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
